# the_vocar

./: Cargo.toml  README.md  index.html
assets/: manifest.json  sw.js
src/: app.rs  demo.rs  demographic.rs  lib.rs  main.rs
