[package]
name = "vocar"
version = "0.3.0"
authors = [
    "Sharif Abdullahi <sharif@typp.org>",
    "Emil Ernerfeldt <emil.ernerfeldt@gmail.com>",
    "The Young People's Project <https://www.typp.org>"
]
edition = "2021"

[dependencies]
egui = "^0.21"
eframe = { version = "^0.21", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
getrandom = { version = "^0.2", features = ["js"] }
image = "^0.24"
rand = "^0.8"
ron = "^0.8"
serde = { version = "^1.0", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "^0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "^0.1"
tracing-wasm = "^0.2"
wasm-bindgen-futures = "^0.4"


[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2